@@ -111,6 +111,12 @@ task smoke(type: Test) {
   classpath = sourceSets.smokeTest.runtimeClasspath
 }
 
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+  getMainClass().set("uk.gov.hmcts.fortifyclient.FortifyClientMainApp")
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 checkstyle {
   maxWarnings = 0
   toolVersion = '10.12.0'
@@ -288,6 +294,8 @@ dependencies {
   implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
 
   implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
+
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.3.0'
 
   testImplementation(group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '3.1.6') {
     exclude group: "com.github.tomakehurst", module: "wiremock-standalone"
